libgraph: move move.pxd to common

--- a/common/meson.build
+++ b/common/meson.build
@@ -5,7 +5,9 @@ libcommon = static_library('libcommon',
 
 common_inc = include_directories('.')
 common_cython_inc = meson.current_source_dir()
-common_cython_files = files('common/__init__.pxd', 'common/cy_helper.pxd')
+common_cython_files = files('common/__init__.pxd',
+                            'common/cy_helper.pxd',
+                            'common/move.pxd')
 
 common_dep = declare_dependency(link_with: libcommon,
                                 include_directories: common_inc)
