--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -1,24 +1,24 @@
 native_step_pyx_cpp = custom_target('native_step_pyx',
   output : ['native_step_pyx.cpp'],
-  input : files('native_step.pyx',
-                'option.pxd',
-                'detect_interactions.pxd',
-                'freertos_instances.pxd',
-                'intermediate_analysis.pxd',
-                'validation.pxd',
-                'bb_split.pxd',
-                'cdummy.pxd',
-                'comp_insert.pxd',
-                'cstep.pxd',
-                'fn_single_exit.pxd',
-                'icfg.pxd',
-                'ir_reader.pxd',
-                'llvm.pxd',
-                'llvm_basic_optimization.pxd',
-                'llvm_map.pxd',
-                'test.pxd',
-                'warning.pxd'),
-  command : [cython, '-I', graph_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
+  input : [files('native_step.pyx',
+                 'option.pxd',
+                 'detect_interactions.pxd',
+                 'freertos_instances.pxd',
+                 'intermediate_analysis.pxd',
+                 'validation.pxd',
+                 'bb_split.pxd',
+                 'cdummy.pxd',
+                 'comp_insert.pxd',
+                 'cstep.pxd',
+                 'fn_single_exit.pxd',
+                 'icfg.pxd',
+                 'ir_reader.pxd',
+                 'llvm.pxd',
+                 'llvm_basic_optimization.pxd',
+                 'llvm_map.pxd',
+                 'test.pxd',
+                 'warning.pxd') + common_cython_files],
+  command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
 )
 
 py_logging_pyx_cpp = custom_target('py_logging_pyx',
