--- a/appl/meson.build
+++ b/appl/meson.build
@@ -22,26 +22,27 @@ subdir(freertos_path)
 
 freertos_targets = []
 foreach app : ['a',
-               'invalid_isr_syscall',
-               'c',
-               'loop_detection',
-               'topological_sort',
-               'f',
-               'g',
                'argument_load',
-               'start_scheduler_relation',
+               'c',
+               'critical_region_detection',
+               'dead_code',
                'deadlock',
                'dominator',
                'eventgroup',
+               'f',
+               'g',
                'icfg',
+               'invalid_isr_syscall',
                'invalid_mutex',
-               'priority_inversion',
-               'critical_region_detection',
                'invalid_semaphore',
-               'thesis_print',
+               'loop_detection',
+               'multi_exit',
                'ospert',
-               'dead_code',
-               'multi_exit']
+               'priority_inversion',
+               'start_scheduler_relation',
+               'syscall',
+               'thesis_print',
+               'topological_sort']
    ll_target = custom_target('freertos-' + app,
                              input : ['FreeRTOS/' + app + '.cc'] + freertos_includes,
                              output : ['freertos-' + app + '.ll'],
