add precompiled header support
PCH are activated per default in Meson. To deactivate them use:
meson configure -Db_pch=false

PCH seems to be a little bit faster. This are the build times for the
whole project with and without PCH on my machine:

      | no PCH | PCH
------+--------+----
GCC   | 308s   | 232s
Clang | 359s   | 282s

--- a/libgraph/meson.build
+++ b/libgraph/meson.build
@@ -12,6 +12,7 @@ graph_pyx_cpp = custom_target('graph_pyx',
 
 libgraph = py3_inst.extension_module('graph',
     graph_pyx_cpp, 'graph.cc', 'cfg.cpp',
+    cpp_pch: 'pch/graph_pch.h',
     dependencies : [py3_inst.dependency(), llvm_dep, boost_dep, common_dep, bgl_dep]
 )
 
