rename libgraph -> graph

--- a/graph/meson.build
+++ b/graph/meson.build
@@ -10,14 +10,14 @@ graph_pyx_cpp = custom_target('graph_pyx',
     command : [cython, '-I', bgl_cython_inc, '-I', common_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
 )
 
-libgraph = py3_inst.extension_module('graph',
+py_graph = py3_inst.extension_module('graph',
     graph_pyx_cpp, 'graph.cc', 'cfg.cpp',
     cpp_pch: 'pch/graph_pch.h',
     dependencies : [py3_inst.dependency(), llvm_dep, boost_dep, common_dep, bgl_dep]
 )
 
 graph_inc = include_directories('.')
-graph_dep = declare_dependency(link_with : libgraph,
+graph_dep = declare_dependency(link_with : py_graph,
                                include_directories : graph_inc)
 
 graphdir = meson.current_build_dir()
