steps: remove steps based on old graph API

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -2,10 +2,6 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
   output : ['native_step_pyx.cpp'],
   input : [files('native_step.pyx',
                  'option.pxd',
-                 'detect_interactions.pxd',
-                 'freertos_instances.pxd',
-                 'intermediate_analysis.pxd',
-                 'validation.pxd',
                  'bb_split.pxd',
                  'cdummy.pxd',
                  'comp_insert.pxd',
@@ -13,11 +9,9 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'fn_single_exit.pxd',
                  'icfg.pxd',
                  'ir_reader.pxd',
-                 'llvm.pxd',
                  'llvm_basic_optimization.pxd',
                  'llvm_map.pxd',
-                 'test.pxd',
-                 'warning.pxd') + common_cython_files],
+                 'test.pxd') + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
 )
 
@@ -43,19 +37,13 @@ log_dep = declare_dependency(
 plib = py3_inst.extension_module('native_step',
   native_step_pyx_cpp,
   files('option.cpp',
-        'detect_interactions.cpp',
-        'freertos_instances.cpp',
-        'intermediate_analysis.cpp',
-        'validation.cpp',
         'bb_split.cpp',
         'cdummy.cpp',
         'comp_insert.cpp',
         'fn_single_exit.cpp',
         'icfg.cpp',
         'ir_reader.cpp',
-        'llvm.cpp',
         'llvm_basic_optimization.cpp',
-        'llvm_dumper.cpp',
         'llvm_map.cpp',
         'test/bb_split_test.cpp',
         'test/comp_insert_test.cpp',
