switch to graph-tool

--- a/common/meson.build
+++ b/common/meson.build
@@ -1,6 +1,7 @@
+common_dependencies = [llvm_dep, boost_dep]
 libcommon = static_library('libcommon',
-	'llvm_common.cpp',
-	dependencies: llvm_dep
+    'llvm_common.cpp',
+    dependencies: common_dependencies
 )
 
 common_inc = include_directories('.')
@@ -10,6 +11,7 @@ common_cython_files = files('common/__init__.pxd',
                             'common/move.pxd')
 
 common_dep = declare_dependency(link_with: libcommon,
+                                dependencies: common_dependencies,
                                 include_directories: common_inc)
 
 commondir = meson.current_build_dir()
