--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -11,6 +11,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'ir_reader.pxd',
                  'llvm_basic_optimization.pxd',
                  'llvm_map.pxd',
+                 'value_analysis.pxd',
                  'test.pxd') + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
 )
@@ -45,6 +46,8 @@ plib = py3_inst.extension_module('native_step',
         'ir_reader.cpp',
         'llvm_basic_optimization.cpp',
         'llvm_map.cpp',
+        'value_analysis.cpp',
+        'value_analyzer.cpp',
         'test/bb_split_test.cpp',
         'test/comp_insert_test.cpp',
         'test/fn_single_exit_test.cpp',
