steps: add const_prop step

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -5,6 +5,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'bb_split.pxd',
                  'cdummy.pxd',
                  'comp_insert.pxd',
+                 'const_prop.pxd',
                  'cstep.pxd',
                  'fn_single_exit.pxd',
                  'icfg.pxd',
@@ -41,6 +42,7 @@ plib = py3_inst.extension_module('native_step',
         'bb_split.cpp',
         'cdummy.cpp',
         'comp_insert.cpp',
+        'const_prop.cpp',
         'fn_single_exit.cpp',
         'icfg.cpp',
         'ir_reader.cpp',
