--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -6,6 +6,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'cdummy.pxd',
                  'comp_insert.pxd',
                  'const_prop.pxd',
+                 'dead_code_elimination.pxd',
                  'cstep.pxd',
                  'fn_single_exit.pxd',
                  'icfg.pxd',
@@ -43,6 +44,7 @@ plib = py3_inst.extension_module('native_step',
         'cdummy.cpp',
         'comp_insert.cpp',
         'const_prop.cpp',
+        'dead_code_elimination.cpp',
         'fn_single_exit.cpp',
         'icfg.cpp',
         'ir_reader.cpp',
