--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -2,6 +2,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
   output : ['native_step_pyx.cpp'],
   input : [files('native_step.pyx',
                  'option.pxd',
+                 'agressive_dce.pxd',
                  'bb_split.pxd',
                  'cdummy.pxd',
                  'comp_insert.pxd',
@@ -13,6 +14,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'ir_reader.pxd',
                  'llvm_basic_optimization.pxd',
                  'llvm_map.pxd',
+                 'sparse_cond_const_prop.pxd',
                  'value_analysis.pxd',
                  'test.pxd') + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
@@ -40,6 +42,7 @@ log_dep = declare_dependency(
 plib = py3_inst.extension_module('native_step',
   native_step_pyx_cpp,
   files('option.cpp',
+        'agressive_dce.cpp',
         'bb_split.cpp',
         'cdummy.cpp',
         'comp_insert.cpp',
@@ -50,6 +53,7 @@ plib = py3_inst.extension_module('native_step',
         'ir_reader.cpp',
         'llvm_basic_optimization.cpp',
         'llvm_map.cpp',
+        'sparse_cond_const_prop.cpp',
         'value_analysis.cpp',
         'value_analyzer.cpp',
         'test/bb_split_test.cpp',
