--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -14,6 +14,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'ir_reader.pxd',
                  'llvm_basic_optimization.pxd',
                  'llvm_map.pxd',
+                 'mem2reg.pxd',
                  'sparse_cond_const_prop.pxd',
                  'value_analysis.pxd',
                  'test.pxd') + common_cython_files],
@@ -53,6 +54,7 @@ plib = py3_inst.extension_module('native_step',
         'ir_reader.cpp',
         'llvm_basic_optimization.cpp',
         'llvm_map.cpp',
+        'mem2reg.cpp',
         'sparse_cond_const_prop.cpp',
         'value_analysis.cpp',
         'value_analyzer.cpp',
