steps: split value analysis in two steps
For argument postprocessing

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -32,7 +32,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'ir_reader.pxd',
                  'llvm_basic_optimization.pxd',
                  'llvm_map.pxd',
-                 'value_analysis.pxd',
+                 'value_analysis_core.pxd',
                  'test.pxd') + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '-I', pyllco_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
 )
@@ -48,7 +48,7 @@ plib = py3_inst.extension_module('native_step',
         'ir_reader.cpp',
         'llvm_basic_optimization.cpp',
         'llvm_map.cpp',
-        'value_analysis.cpp',
+        'value_analysis_core.cpp',
         'value_analyzer.cpp',
         'test/bb_split_test.cpp',
         'test/comp_insert_test.cpp',
