--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -55,6 +55,7 @@ plib = py3_inst.extension_module('native_step',
         'llvm_basic_optimization.cpp',
         'llvm_map.cpp',
         'mem2reg.cpp',
+        'reassociate.cpp',
         'sparse_cond_const_prop.cpp',
         'value_analysis.cpp',
         'value_analyzer.cpp',
