--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -16,6 +16,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'llvm_map.pxd',
                  'mem2reg.pxd',
                  'sparse_cond_const_prop.pxd',
+                 'simplify_cfg.pxd',
                  'value_analysis.pxd',
                  'test.pxd') + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
@@ -57,6 +58,7 @@ plib = py3_inst.extension_module('native_step',
         'mem2reg.cpp',
         'reassociate.cpp',
         'sparse_cond_const_prop.cpp',
+        'simplify_cfg.cpp',
         'value_analysis.cpp',
         'value_analyzer.cpp',
         'test/bb_split_test.cpp',
