appl: add sse stresstest/example

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -41,6 +41,7 @@ foreach app : ['a',
                'multi_exit',
                'ospert',
                'priority_inversion',
+               'sse',
                'start_scheduler_relation',
                'syscall',
                'thesis_print',
