steps/native: add cfg preperation step

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -5,6 +5,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                  'agressive_dce.pxd',
                  'bb_split.pxd',
                  'cdummy.pxd',
+                 'cfg_prep.pxd',
                  'comp_insert.pxd',
                  'const_prop.pxd',
                  'dead_code_elimination.pxd',
@@ -47,6 +48,7 @@ plib = py3_inst.extension_module('native_step',
         'agressive_dce.cpp',
         'bb_split.cpp',
         'cdummy.cpp',
+        'cfg_prep.cpp',
         'comp_insert.cpp',
         'const_prop.cpp',
         'dead_code_elimination.cpp',
