test/cfg_prep: add test for no specified arguments

--- a/test/meson.build
+++ b/test/meson.build
@@ -102,9 +102,14 @@ test('ir-reader-multiple-symbols',
 
 test('cfg_prep',
    py3_inst,
-   args: [files('../ara.py'), files('../build/appl/const_prop.ll'), '--os', 'FreeRTOS',
-          '-v',
-          '--step-settings', files('cfg_prep.json')],
+   args: [files('../ara.py'), files('../build/appl/const_prop.ll'), '--os', 'FreeRTOS', '--step-settings', files('cfg_prep.json')],
+   env : [python_path]
+)
+
+test('cfg_prep_no_args',
+   py3_inst,
+   args: [files('../ara.py'), files('../build/appl/const_prop.ll'), '--os', 'FreeRTOS', '--step-settings', files('cfg_prep_no_args.json')],
+   should_fail: true,
    env : [python_path]
 )
 
