generator build targets

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -39,6 +39,40 @@ foreach app : ['a',
 									  ir_flags +
                                       clang_flags)
   set_variable('freertos_' + app.underscorify(), ll_target)
+
+  o_target = custom_target('freertos-' + app + '.o',
+                            input : ll_target,
+                            output : ['freertos-' + app + '.ll.o'],
+                            command : llc_cmd)
+
+  foreach t : ara_gen_freertos_targets
+	name_prefix = 'freertos-' + app + '-' + t
+	os_target = custom_target(name_prefix + '-os',
+							  input: ll_target,
+							  output: [name_prefix + '-os.cc',
+									   name_prefix + '-os.cc.startup.s'],
+							  command: get_variable('ara_gen_' + t)
+							 )
+
+	elf_target = custom_target(name_prefix + '.elf',
+							   input: [o_target,
+									   os_target,
+									   libs_targets,
+									   get_variable('libfreertos_'+t)],
+							   output: name_prefix + '.elf',
+							   depfile: name_prefix + '.elf.dep',
+							   command: clang_cpp +
+										libs_includes +
+										ld_flags +
+										clang_flags)
+	bin_target = custom_target(name_prefix + '.bin',
+							   input: [elf_target],
+							   output: name_prefix + '.bin',
+							   command: objcopy_cmd)
+	run_target('flash_' + name_prefix, command: ['st-flash', 'write', bin_target, '0x8000000'])
+
+  endforeach
+
   freertos_targets += ll_target
 endforeach
 
